--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "foodfinder-client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
-    "@types/node": "20.2.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "next": "13.4.3",
-    "nookies": "^2.5.2",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.8.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "zod": "^3.21.4"
-  }
+	"name": "foodfinder-client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.1.0",
+		"@types/node": "20.2.1",
+		"@types/react": "18.2.6",
+		"@types/react-dom": "18.2.4",
+		"autoprefixer": "10.4.14",
+		"axios": "^1.4.0",
+		"next": "13.4.3",
+		"next-cloudinary": "^4.10.1",
+		"nookies": "^2.5.2",
+		"postcss": "8.4.23",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.43.9",
+		"react-hot-toast": "^2.4.1",
+		"react-icons": "^4.8.0",
+		"react-timeit": "1.2.12",
+		"tailwindcss": "3.3.2",
+		"typescript": "5.0.4",
+		"zod": "^3.21.4"
+	}
 }
